Latency Calculator working